--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,13 @@
 NODE_ENV=development
 PORT=80
+
+# Log max size in Megabytes.
+LOG_MAX_SIZE=2
+
+# DB Connection
+DB_ENDPOINT=localhost
+DB_PORT=3306
+DB_DIALECT=mysql
+DB_NAME=bar_db
+DB_USER=bar_user
+DB_PASSWORD=bar_pass
