--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "mocha --recursive"
+    "test": "DOTENV_CONFIG_PATH=.env.test mocha -r dotenv/config"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/haseebsaeed/bar#readme",
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
     "winston": "^3.7.2"
