- updated Readme file - fixed http code - dockerized the app - fixed .gitignore

--- a/.env.test
+++ b/.env.test
@@ -1,13 +1,13 @@
-NODE_ENV=production
+NODE_ENV=test
 PORT=80
 
 # Log max size in Megabytes.
 LOG_MAX_SIZE=2
 
 # DB Connection
-DB_ENDPOINT=mysql-server
+DB_ENDPOINT=localhost
 DB_PORT=3306
 DB_DIALECT=mysql
-DB_NAME=bar_db
+DB_NAME=test_bar_db
 DB_USER=bar_user
 DB_PASSWORD=bar_pass
