--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
       - ./db-init:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
     command: ['mysqld', '--character-set-server=utf8', '--collation-server=utf8_general_ci']
+  bar-server:
+    build: .
+    restart: always
+    depends_on:
+      - mysql-server
+    ports:
+      - "4000:80"  
 # Names our volume
 volumes:
   mysql-data:
